--- a/alis-virtualbox.conf
+++ b/alis-virtualbox.conf
@@ -16,7 +16,7 @@ DEVICE_TRIM="true" # If DEVICE supports TRIM
 LVM="true" # true if use LVM for partitioning
 LUKS_PASSWORD="ask" # LUKS encryption key, if LVM will be user LVM on LUKS. Empty for not use LUKS/encryption. If "ask" password alis asks for a secure password.
 LUKS_PASSWORD_RETYPE="ask"
-FILE_SYSTEM_TYPE="!ext4 !btrfs !xfs" # (single)
+FILE_SYSTEM_TYPE="!ext4 btrfs !xfs" # (single)
 SWAP_SIZE="!2048 !4096 !8192" # (single, in megabytes)
 PARTITION_MODE="auto !custom !manual"
 PARTITION_CUSTOM_PARTED_UEFI="mklabel gpt mkpart ESP fat32 1MiB 512MiB mkpart root $FILE_SYSTEM_TYPE 512MiB 100% set 1 esp on"
