fix: set shell to zsh

--- a/alis-virtualbox.conf
+++ b/alis-virtualbox.conf
@@ -82,7 +82,7 @@ HOOKS="base !udev !usr !resume !systemd !btrfs keyboard autodetect modconf block
 BOOTLOADER="grub !refind !systemd" # (single)
 
 # shell
-CUSTOM_SHELL="!bash !zsh !dash !fish" # (single)
+CUSTOM_SHELL="!bash zsh !dash !fish" # (single)
 
 # desktop
 DESKTOP_ENVIRONMENT="!gnome !kde !xfce !mate !cinnamon !lxde !i3-wm i3-gaps" # (single)
