fix: dont use reflector

--- a/alis-virtualbox.conf
+++ b/alis-virtualbox.conf
@@ -32,7 +32,7 @@ WIFI_HIDDEN=""
 PING_HOSTNAME="mirrors.kernel.org"
 
 # install (precede with ! for not install)
-REFLECTOR="true"
+REFLECTOR="false"
 REFLECTOR_COUNTRIES=("United Kingdon")
 PACMAN_MIRROR="https://mirrors.kernel.org/archlinux/\$repo/os/\$arch"
 KERNELS="!linux-lts !linux-lts-headers !linux-hardened !linux-hardened-headers !linux-zen !linux-zen-headers" # Additional kernels and headers (multiple)
